change meta desc

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Paint the City is a creative boutique offering personalized web development, graphic design, 
-        branding, and content creation services for small to medium-sized businesses." />
+        <meta name="description" content="This site lets you take a break from the busy bandwidth of the internet by letting you relax and let your thoughts go." />
         <meta name="author" content="" />
         <title>Cozy</title>
         <link rel="stylesheet" href="https://use.typekit.net/tjg2gok.css">
@@ -12,7 +11,7 @@
     </head>
 <body>
 <div class ="container">
-<div class="header">
+<div class="main">
 <h1>Cozy</h1>
 <p>Let your thoughts go into the void</p>
 <form>
