--- a/index.html
+++ b/index.html
@@ -7,18 +7,47 @@
         <meta name="author" content="" />
         <title>Cozy</title>
         <link rel="stylesheet" href="https://use.typekit.net/tjg2gok.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css"/>
     </head>
 <body>
-<div class ="container">
-<div class="main">
-<h1>Cozy</h1>
-<p>Let your thoughts go into the void</p>
-<form>
-    <input type="text" placeholder="Whats on your mind?">
-</form>
-</div>
-</div>
-
+   
+    <div class = "overlay">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="credits.html">Credit</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
+        <div class ="container">
+            <div class="main">
+                <!-- trans bg for nav, add additional background image and sounds, randomize colors,motivational quotes based on message intent? when message entered. replace lead, plane needs to go in one direction instead of coming back to original -->
+                <!--https://obliquestrategies.ca/#-->
+                <h1 class="display-1">Cozy</h1>
+                <p class="lead">Let your thoughts go into the void</p>
+                <br><br>
+                <img src="images/paper-plane-3585660-3099046.webp" class = "airplane" alt="fly">
+                <form>
+                    <input class="form-control" id="message" type="text" placeholder="Whats on your mind?">
+                </form>
+                <br><br>
+                <audio controls autoplay loop>
+                    <source src="sounds/rain-sound-188158.mp3" type="audio/mpeg">
+                   <p>Your browser does not support the video tag.</p>
+                </audio>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
