smoother plane transition when sending a message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1 class="display-1">Cozy</h1>
                 <p class="lead">Let your thoughts go into the void</p>
                 <br><br>
-                <img src="images/paper-plane-3585660-3099046.webp" class = "airplane" alt="fly">
+                <img src="images/paper-plane-3585660-3099046.gif" class = "airplane" alt="fly">
                 <form>
                     <input class="form-control" id="message" type="text" placeholder="Whats on your mind?">
                 </form>
