--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     </head>
 <body>
    
-    <div class="overlay">
+    <div class = "overlay">
       <nav class="navbar navbar-expand-lg bg-transparent">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,33 +23,20 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">Fire</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">Wind</a>
+                <a class="nav-link" href="index.html">Cozy</a>
               </li>
             </ul>
           </div>
       </nav>
         <div class ="container">
             <div class="main">
-                <!-- add additional background image, randomize colors, motivational quotes based on message intent? when message entered. replace lead hide text box, quote fades in after sent msg? -->
-                <!--https://obliquestrategies.ca/#-->
-                <h1 class="display-1">Cozy</h1>
-                <p class="lead">Enter your thoughts into the void</p>
+                <h1 class="display-1">About</h1>
+                <p class="lead">The purpose of this site is to interact with the content and take a break from the overstimulation of the internet. 
+                    Get your thoughts out instead of bottling up emotiond and enjoy calming sounds to help you relax and take your mind off things.</p>
                 <br><br>
-                <img src="images/paper-plane-3585660-3099046.gif" class = "airplane" alt="fly">
-                <form>
-                  <textarea class="form-control" id="message" type="text" placeholder="Whats on your mind?" rows="1" ></textarea>
-                </form>
-                <br><br>
-                <audio controls autoplay loop>
-                    <source src="sounds/rain-sound-188158.mp3" type="audio/mpeg">
-                   <p>Your browser does not support the video tag.</p>
-                </audio>
+                <h2 class="display-1">Meet the Developer</h2>
+                <p class="lead">Hi! My name is Rashad, I am a frontend developer that loves creating compelling experiences.
+                     My favorite color is red and I love hot chocolate.</p>
             </div>
         </div>
     </div>
