change image name and comment out nav links

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="about.html">Fire</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">Wind</a>
-              </li>          
+              </li>           -->
             </ul>
             <div id="waveform" class="d-flex align-items-center">
               <!-- the waveform will be rendered here -->
@@ -46,10 +46,10 @@
             <div class="main">
                 <!-- randomize colors, motivational quotes based on message intent? when message entered. replace lead hide text box, quote fades in after sent msg? -->
                 <!--https://obliquestrategies.ca/#-->
-                <h1 class="display-1">Cozy</h1>
+                <h1 class="display-1">Thoughtlesss</h1>
                 <p class="lead">Enter your thoughts into the void</p>
                 <br><br>
-                <img src="images/paper-plane-3585660-3099046.gif" class = "airplane" alt="fly">
+                <img src="images/paper-plane.gif" class = "airplane" alt="fly">
                 <form>
                   <textarea class="form-control" id="message" type="text" placeholder="Whats on your mind?" rows="1" ></textarea>
                 </form>
