--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
 
         <div class ="container">
             <div class="main">
-                <!-- randomize colors, motivational quotes based on message intent? when message entered. replace lead hide text box, quote fades in after sent msg? -->
+                <!--motivational quotes based on message intent? when message entered. replace lead hide text box, quote fades in after sent msg? -->
                 <!--https://obliquestrategies.ca/#-->
                 <h1 class="display-1">Thoughtlesss</h1>
-                <p class="lead">Enter your thoughts into the void</p>
+                <p class="lead" id="lead-text">Enter your thoughts into the void</p>
                 <br><br>
                 <img src="images/paper-plane.gif" class = "airplane" alt="fly">
                 <form>
                   <textarea class="form-control" id="message" type="text" placeholder="Whats on your mind?" rows="1" ></textarea>
                 </form>
-                <br><br>
-              
+                <p id="quote"></p>
             </div>
         </div>
     </div>
