fix typos and nav bug in about

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </nav>
-
+<!-- todo: adjust mobile view  -->
         <div class ="container">
             <div class="main">
                 <!--https://obliquestrategies.ca/#-->
