--- a/about.html
+++ b/about.html
@@ -17,22 +17,36 @@
    
     <div class = "overlay">
       <nav class="navbar navbar-expand-lg bg-transparent">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-between align-items-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Cozy</a>
+                <a class="nav-link" href="index.html">Thoughtlesss</a>
               </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="about.html">Fire</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">Wind</a>
+              </li>           -->
             </ul>
+            <div id="waveform" class="d-flex align-items-center">
+              <!-- the waveform will be rendered here -->
+            </div>
           </div>
+        </div>
+      </nav>
       </nav>
         <div class ="container">
             <div class="main">
                 <h1 class="display-1">About</h1>
                 <p class="lead">The purpose of this site is to interact with the content and take a break from the overstimulation of the internet. 
-                    Get your thoughts out instead of bottling up emotiond and enjoy calming sounds to help you relax and take your mind off things.</p>
+                    Get your thoughts out instead of bottling up emotions and enjoy calming sounds to help you relax and take your mind off things.</p>
                 <br><br>
                 <h2 class="display-1">Meet the Developer</h2>
                 <p class="lead">Hi! My name is Rashad, I am a frontend developer that loves creating compelling experiences.
