--- a/about.html
+++ b/about.html
@@ -14,8 +14,7 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
 <body>
-   
-    <div class = "overlay">
+    <div class = "overlay-about">
       <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -42,9 +41,11 @@
         </div>
       </nav>
       </nav>
-        <div class ="container">
-            <div class="main">
+            <div class="about-section">
                 <h1 class="display-1">About</h1>
+              </div>
+            </div>
+            <div class = "section-text">
                 <p class="lead">The purpose of this site is to interact with the content and take a break from the overstimulation of the internet. 
                     Get your thoughts out instead of bottling up emotions and enjoy calming sounds to help you relax and take your mind off things.</p>
                 <br><br>
@@ -52,8 +53,8 @@
                 <p class="lead">Hi! My name is Rashad, I am a frontend developer that loves creating compelling experiences.
                      My favorite color is red and I love hot chocolate.</p>
             </div>
-        </div>
-    </div>
+        
+    
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
