--- a/index.html
+++ b/index.html
@@ -14,34 +14,35 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
 <body>
-   
     <div class="overlay">
-      <nav class="navbar navbar-expand-lg bg-transparent">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-between align-items-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="about.html">Fire</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">Wind</a>
-              </li>           -->
-            </ul>
-            <div id="waveform" class="d-flex align-items-center">
-              <!-- the waveform will be rendered here -->
-            </div>
+      <div class = "top-barContainer d-flex align-items-start justify-content-between">
+        <nav class="navbar navbar-expand-lg bg-transparent">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <!--<li class="nav-item">
+                    <a class="nav-link" href="about.html">Fire</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">Wind</a>
+                  </li>-->
+                </ul>
+              </div>
           </div>
+        </nav>
+        <div id="waveform" class="d-flex align-items-end">
+          <!-- the waveform will be rendered here -->
         </div>
-      </nav>
-<!-- todo: adjust mobile view  -->
+      </div>
+      
         <div class ="container">
             <div class="main">
                 <!--https://obliquestrategies.ca/#-->
