add lighter nav toggle

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="overlay">
       <div class = "top-barContainer d-flex align-items-start justify-content-between">
-        <nav class="navbar navbar-expand-lg bg-transparent">
+        <nav class="navbar navbar-expand-lg bg-transparent"data-bs-theme="dark">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
