--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="This site lets you take a break from the busy bandwidth of the internet by letting you relax and let your thoughts go." />
         <meta name="author" content="" />
-        <title>Cozy</title>
+        <title>Thoughtlesss</title>
         <link rel="stylesheet" href="https://use.typekit.net/tjg2gok.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
